--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dac5ef">  <td>24/10/29 12:35:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocatorTest.loginTest()[pri:0, instance:testScripts.LocatorTest@57d7f8ca]">loginTest</td> 
-  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>24/11/12 12:21:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CDPTest.setUp()[pri:0, instance:testScripts.CDPTest@3d6f0054]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1265900909</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>24/11/12 12:21:20</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CDPTest.deviceModeTest()[pri:0, instance:testScripts.CDPTest@3d6f0054]">deviceModeTest</td> 
+  <td>main@1265900909</td>   <td></td> </tr>
 </table>
